<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3F4B6"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:ignore="LabelFor"
    tools:context=".RegisterPage">


    <LinearLayout
        android:id="@+id/PasswordInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="30dp"
            android:text="@string/EntryLoginRegister" />

        <EditText
            android:id="@+id/LoginInfo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="30dp"
            android:text="@string/EntryPasswordRegister" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:ems="10"
            android:importantForAutofill=""
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="30dp"
            android:text="@string/EntryPasswordAgain" />

        <EditText
            android:id="@+id/PasswordInfo2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="#A3320F"
            android:text="@string/Registration" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>